<?xml version="1.0" encoding="UTF-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view"

>
    <item
            android:id="@+id/cog"
            android:checkable="true"
            android:icon="@drawable/cog"
            android:title="@string/setting"

    />
    <item
            android:checkable="true"
            android:id="@+id/javam"
            android:icon="@drawable/javanull"
            android:title="@string/javacodes"

    />
    <item
            android:checkable="true"
            android:id="@+id/mykets"
            android:icon="@drawable/googleplay"
            android:title="@string/myket"

    />
    <item
            android:checkable="true"
            android:id="@+id/getTerminal"
            android:icon="@drawable/console"
            android:title="@string/terminal"

    />
    <item
            android:checkable="true"
            android:id="@+id/sdcardset"
            android:icon="@drawable/sdcard"
            android:title="@string/sd"

    />
    <item
            android:checkable="true"
            android:id="@+id/themebackup"
            android:icon="@drawable/keyboardlisnertalluserpost_1"
            android:title="@string/themebackup"

    />
    <item
            android:checkable="true"
            android:id="@+id/logcatset"
            android:icon="@drawable/textsearch"
            android:title="@string/logcat"

    />
    <item
            android:checkable="true"
            android:id="@+id/iconsvg"
            android:icon="@drawable/pms"
            android:title="@string/icon"

    />
    <item
            android:checkable="true"
            android:id="@+id/getKeyboard"
            android:icon="@drawable/keyboard"
            android:title="@string/keyboard"

    />
    <item
            android:checkable="true"
            android:id="@+id/updateApp"
            android:icon="@drawable/flash"
            android:title="@string/newversion"

    />
    <item
            android:checkable="true"
            android:id="@+id/exits"
            android:icon="@drawable/exit"
            android:title="@string/exitapps"

    />
    <item
            android:checkable="true"
            android:id="@+id/lerans"
            android:icon="@drawable/keyboardlisnertalluserpost_4"
            android:title="@string/leran"

    />
    <item
            android:checkable="true"
            android:id="@+id/sazndeh"
            android:icon="@drawable/information"
            android:title="@string/dev"

    />
</menu>
